--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<h1>This is a test webpage. <br />
-				This website is used as a learning example<br />
+				This website is used as an example<br />
 				of web development code that I am learning.</h1>
 			</header>
 
