--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<h3>Welcome to my webpage</h3>
 						</header>
 						<p>There is nothing special about this website right now, but over time, I'll be adding more and more contect to it.  This site will mostly be used to teach myself Javascript and JQuery.  I have plans to learn a lot of programming languages, giving myself the Full Stack experience.  Once I figure out how to leave a comments section, feel free to leave one. </p>
-						<div class="6u$ 12u$">
+
 						<strong><p>I have decided to learn the following:
 						<!---->
 						<ol>
@@ -63,7 +63,7 @@
 							<li>MySQL and MangoDB</li>
 							<li>C & C++</li>
 							<li>and if I am not completely sick of al of this....Ruby on Rails</li>
-						</ol></p></strong></div>
+						</ol></p></strong>
 						<ul class="actions">
 							<li><a href="http://www.google.ca" class="button">Just a Button</a></li>
 						</ul>
