--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 								
 								if (hourNow>18) {
                                     //code
-									greeting = 'Good Evening Shawn';
+									greeting = 'Good Evening';
                                 }else if (hourNow>12) {
                                     //code
-									greeting = 'Good Afternoon Shawn';
+									greeting = 'Good Afternoon';
                                 }else if (hourNow>0) {
                                     //code
-									greeting = 'Good Morning Shawn';
+									greeting = 'Good Morning';
                                 }else{
 									greeting = 'Welcome Shawn';
 								}
@@ -455,7 +455,6 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="www.twitter.com" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="mailto:shawn_duquet@hotmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
