Fixed Welcome msg, and removed form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     //code
 									greeting = 'Good Morning';
                                 }else{
-									greeting = 'Welcome Shawn';
+									greeting = 'Welcome';
 								}
 								document.write(greeting);
 							</script></h1>
@@ -71,7 +71,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Rescues</h2>
+						<h2>Recent Photos</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
@@ -109,7 +109,7 @@
 						</ul>
 					</section>
 
-				<!-- Three -->
+				<!-- Three --><!--
 					<section id="three">
 						<h2>Get In Touch</h2>
 						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
@@ -456,7 +456,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<ul class="icons">
 					<li><a href="www.twitter.com" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="mailto:shawn_duquet@hotmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:shawn_duquet@hotmail.com" class="icon fa-envelope-o"> <span class="label">Email </span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; SDuquet</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
