--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Test Repository</title>
+		<title>Test Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,9 +18,10 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1>This is a test webpage. <br />
-				This website is used as an example<br />
-				of web development code that I am learning.</h1>
+				<h1>My name is <strong>Shawn Duquet</strong>. <br />
+				I'm a geologist and an environmentalist.<br />
+				Recently, I have started learning programming.<br />
+				It all started with Python, now I want to learn more</h1>
 			</header>
 
 		<!-- Main -->
@@ -57,16 +58,13 @@
 						<!---->
 						<ol>
 							<li>Django (cause I do love Python)</li>
-							<li>JSON, Node.js and Angular.js (maybe even Express.js</li>
+							<li>JSON, Node.js and Angular.js (maybe even Express.js)</li>
 							<li>Ajax and Bootstrap</li>
 							<li>PHP (some people will argue against this one, but it's nice to see where things evolved from)</li>
 							<li>MySQL and MangoDB</li>
 							<li>C & C++</li>
-							<li>and if I am not completely sick of al of this....Ruby on Rails</li>
+							<li>and if I am not completely sick of all of this....Ruby on Rails</li>
 						</ol></p></strong>
-						<ul class="actions">
-							<li><a href="http://www.google.ca" class="button">Just a Button</a></li>
-						</ul>
 					</section>
 
 				<!-- Two -->
