--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1>My name is <strong>Shawn Duquet</strong>. <br />
-				I'm a geologist and an environmentalist.<br />
-				Recently, I have started learning programming.<br />
+				<h1>My name is <strong>Shawn Duquet</strong>. <br>
+				I'm a geologist and an environmentalist.<br>
+				Recently, I have started learning programming.<br>
 				It all started with Python, now I want to learn more</h1>
 			</header>
 
