--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<h1><p>My name is <strong>Shawn Duquet</strong>. <br>
-				I'm a geologist and an environmentalist.<br>
-				Recently, I have started learning programming.<br>
-				It all started with Python, now I want to learn more.</p></h1>
+				<p>My name is <strong>Shawn Duquet</strong>.<br></p>
+				<p>I'm a geologist and an environmentalist.<br></p>
+				<p>Recently, I have started learning programming.<br></p>
+				<p>It all started with Python, now I want to learn more.</p>
 			</header>
 
 		<!-- Main -->
