--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-				<p>My name is <strong>Shawn Duquet</strong>.<br></p>
-				<p>I'm a geologist and an environmentalist.<br></p>
-				<p>Recently, I have started learning programming.<br></p>
-				<p>It all started with Python, now I want to learn more.</p>
+				<p>My name is <strong>Shawn Duquet</strong>.<br>
+				I'm a geologist and an environmentalist.<br>
+				Recently, I have started learning how to programming.<br>
+				It all started with Python, now I want to learn more.</p>
 			</header>
 
 		<!-- Main -->
@@ -54,9 +54,9 @@
 						</header>
 						<p>There is nothing special about this website right now, but over time, I'll be adding more and more contect to it.  This site will mostly be used to teach myself Javascript and JQuery.  I have plans to learn a lot of programming languages, giving myself the Full Stack experience.  Once I figure out how to leave a comments section, feel free to leave one. </p>
 
-						<strong><p>I have decided to learn the following:
+						<p>I have decided to learn the following:
 						<!---->
-						<ol>
+						<ol><strong>
 							<li>Django (cause I do love Python)</li>
 							<li>JSON, Node.js and Angular.js (maybe even Express.js)</li>
 							<li>Ajax and Bootstrap</li>
@@ -64,7 +64,7 @@
 							<li>MySQL and MangoDB</li>
 							<li>C & C++</li>
 							<li>and if I am not completely sick of all of this....Ruby on Rails</li>
-						</ol></p></strong>
+						</ol></strong></p>
 					</section>
 
 				<!-- Two -->
@@ -72,9 +72,9 @@
 						<h2>Recent Photos</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Matt</h3>
-								<p>This is Matt</p>
+								<a href="images/fulls/B&S.jpg" class="image fit thumb"><img src="images/thumbs/B&S.jpg" alt="" /></a>
+								<h3>Ben & Sarah</h3>
+								<p>This is Ben & Sarah</p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
