--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<h2>Recent Photos</h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/B&S.jpg" class="image fit thumb"><img src="images/thumbs/B&S.jpg" alt="" /></a>
+								<a href="images/fulls/BS.jpg" class="image fit thumb"><img src="images/thumbs/BS.jpg" alt="" /></a>
 								<h3>Ben & Sarah</h3>
 								<p>This is Ben & Sarah</p>
 							</article>
