Main page spelling correction

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 				<p>My name is <strong>Shawn Duquet</strong>.<br>
 				I'm a geologist and an environmentalist.<br>
-				Recently, I have started learning how to programming.<br>
+				Recently, I have started learning how to program.<br>
 				It all started with Python, now I want to learn more.</p>
 			</header>
 
@@ -31,14 +31,6 @@
 					<section id="one">
 						<header class="major">
 							<h1>
-							<script>
-								var objUserInfo = new ActiveXObject("WScript.network");
-document.write(objUserInfo.ComputerName+"<br>"); 
-document.write(objUserInfo.UserDomain+"<br>"); 
-document.write(objUserInfo.UserName+"<br>");  
-var uname =  objUserInfo.UserName;
-alert(uname);
-							</script>
 							<script>
 								var today = new Date();
 								var hourNow = today.getHours();
@@ -70,7 +62,7 @@ alert(uname);
 							<li>JSON, Node.js and Angular.js (maybe even Express.js)</li>
 							<li>Ajax and Bootstrap</li>
 							<li>PHP (some people will argue against this one, but it's nice to see where things evolved from)</li>
-							<li>MySQL and MangoDB</li>
+							<li>MySQL and POSTgres</li>
 							<li>C & C++</li>
 							<li>and if I am not completely sick of all of this....Ruby on Rails</li>
 						</ol></strong></p>
@@ -85,7 +77,7 @@ alert(uname);
 								<h3>Ben & Sarah</h3>
 								<p>This is Ben & Sarah</p>
 							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
+						<!---	<article class="6u$ 12u$(xsmall) work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -109,7 +101,7 @@ alert(uname);
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-							</article>
+							</article> --->
 						</div>
 					</section>
 
